<resources>
    <string name="app_name">SweetStop</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registro">Registro</string>

    <string name="h_title_category">Nombre Categoria</string>
    <string name="h_title_catalogo">Nombre Catalogo</string>

    <string name="h_descripcion_catalogo">Detalle Catalogo</string>

    <string name="h_precio_catalogo">0.00</string>

    <string name="mesa">0</string>
</resources>
