<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <ImageView
        android:id="@+id/iV_cell_catalogo"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/header"
        android:background="#99000000"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_cell_catalogo_precio"
                android:layout_marginLeft="25dp"
                style="@style/PrecioCatalogo"
                android:gravity="center_vertical"
                android:hint="@string/h_precio_catalogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/colorAccent"
                android:text="Bs."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:paddingRight="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical|end"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_cell_catalogo_title"
                style="@style/TitleCatalogo"
                android:hint="@string/h_title_catalogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:padding="8dp"
                android:id="@+id/tv_cell_catalogo_descripcion"
                style="@style/DescripcionCatalogo"
                android:hint="@string/h_descripcion_catalogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>