<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.daniela.sweetstop.LoginActivity"
    android:background="@drawable/bg_sesion"
    android:weightSum="1">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Inicio de sesión"
            android:id="@+id/textView4"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:gravity="right|center_vertical" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="SWEET STOP"
        android:layout_marginTop="120dp"
        android:textStyle="bold"
        android:id="@+id/textView3"
        android:textColor="#ffffff"
        android:textSize="35dp" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_weight="0.35">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView"
            android:src="@drawable/ic_action_name" />

        <AutoCompleteTextView
            android:layout_weight="1"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_email"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView2"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_pass" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="15dp"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textColor="@android:color/white"
        android:text="@string/action_sign_in"
        android:background="@drawable/round_lila"
        android:textStyle="bold" />

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="No tengo una cuenta?  "

            android:id="@+id/textView5"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Registrate"
            android:id="@+id/textViewRegistro"
            android:textStyle="bold"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>
